// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers activityReducer should correctly changeFilter 1`] = `
Object {
  "filter": undefined,
  "filterPulldown": false,
  "filters": Array [
    Object {
      "key": "ALL_ACTIVITY",
      "name": "all",
    },
    Object {
      "key": "SENT_ACTIVITY",
      "name": "sent",
    },
    Object {
      "key": "REQUESTED_ACTIVITY",
      "name": "requested",
    },
    Object {
      "key": "PENDING_ACTIVITY",
      "name": "pending",
    },
  ],
  "modal": Object {
    "itemId": null,
    "itemType": null,
  },
  "searchActive": false,
  "searchText": "",
  "showExpiredRequests": false,
}
`;

exports[`reducers activityReducer should correctly hideActivityModal 1`] = `
Object {
  "filter": Object {
    "key": "ALL_ACTIVITY",
    "name": "All Activity",
  },
  "filterPulldown": false,
  "filters": Array [
    Object {
      "key": "ALL_ACTIVITY",
      "name": "all",
    },
    Object {
      "key": "SENT_ACTIVITY",
      "name": "sent",
    },
    Object {
      "key": "REQUESTED_ACTIVITY",
      "name": "requested",
    },
    Object {
      "key": "PENDING_ACTIVITY",
      "name": "pending",
    },
  ],
  "modal": Object {
    "itemId": null,
    "itemType": null,
  },
  "searchActive": false,
  "searchText": "",
  "showExpiredRequests": false,
}
`;

exports[`reducers activityReducer should correctly showActivityModal 1`] = `
Object {
  "filter": Object {
    "key": "ALL_ACTIVITY",
    "name": "All Activity",
  },
  "filterPulldown": false,
  "filters": Array [
    Object {
      "key": "ALL_ACTIVITY",
      "name": "all",
    },
    Object {
      "key": "SENT_ACTIVITY",
      "name": "sent",
    },
    Object {
      "key": "REQUESTED_ACTIVITY",
      "name": "requested",
    },
    Object {
      "key": "PENDING_ACTIVITY",
      "name": "pending",
    },
  ],
  "modal": Object {
    "itemId": undefined,
    "itemType": undefined,
  },
  "searchActive": false,
  "searchText": "",
  "showExpiredRequests": false,
}
`;

exports[`reducers activityReducer should correctly togglePulldown 1`] = `
Object {
  "filter": Object {
    "key": "ALL_ACTIVITY",
    "name": "All Activity",
  },
  "filterPulldown": true,
  "filters": Array [
    Object {
      "key": "ALL_ACTIVITY",
      "name": "all",
    },
    Object {
      "key": "SENT_ACTIVITY",
      "name": "sent",
    },
    Object {
      "key": "REQUESTED_ACTIVITY",
      "name": "requested",
    },
    Object {
      "key": "PENDING_ACTIVITY",
      "name": "pending",
    },
  ],
  "modal": Object {
    "itemId": null,
    "itemType": null,
  },
  "searchActive": false,
  "searchText": "",
  "showExpiredRequests": false,
}
`;

exports[`reducers activityReducer should correctly updateSearchActive 1`] = `
Object {
  "filter": Object {
    "key": "ALL_ACTIVITY",
    "name": "All Activity",
  },
  "filterPulldown": false,
  "filters": Array [
    Object {
      "key": "ALL_ACTIVITY",
      "name": "all",
    },
    Object {
      "key": "SENT_ACTIVITY",
      "name": "sent",
    },
    Object {
      "key": "REQUESTED_ACTIVITY",
      "name": "requested",
    },
    Object {
      "key": "PENDING_ACTIVITY",
      "name": "pending",
    },
  ],
  "modal": Object {
    "itemId": null,
    "itemType": null,
  },
  "searchActive": undefined,
  "searchText": "",
  "showExpiredRequests": false,
}
`;

exports[`reducers activityReducer should correctly updateSearchText 1`] = `
Object {
  "filter": Object {
    "key": "ALL_ACTIVITY",
    "name": "All Activity",
  },
  "filterPulldown": false,
  "filters": Array [
    Object {
      "key": "ALL_ACTIVITY",
      "name": "all",
    },
    Object {
      "key": "SENT_ACTIVITY",
      "name": "sent",
    },
    Object {
      "key": "REQUESTED_ACTIVITY",
      "name": "requested",
    },
    Object {
      "key": "PENDING_ACTIVITY",
      "name": "pending",
    },
  ],
  "modal": Object {
    "itemId": null,
    "itemType": null,
  },
  "searchActive": false,
  "searchText": undefined,
  "showExpiredRequests": false,
}
`;
